finished movieviewertest